--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
